smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/conflicting-versions.smithy
// Cannot set Smithy version to `0.0.1` because it was previously set to an incompatible version `0.1.0`
$version: "0.1.0"
$version: "0.0.1"
